--- a/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="xunit" Version="2.9.2" />
+  </ItemGroup>
+
 </Project>
